# microros-self-balancing-robot

./: .gitignore  README.md
.github/workflows/: esp32-build.yml  ros2-build.yml  stm32-build-test.yml
docker/: Dockerfile.ros2  Dockerfile.stm32  docker-compose.yml  ros2_entrypoint.sh
docs/: hardware-activation-checklist.md
docs/hardware/: pin-map.md
docs/lessons/: hardware-bringup-claude-code-prompt.md  phase2-handoff-prompt.md  phase3-handoff-prompt.md  phase4-handoff-prompt.md  phase5-handoff-prompt.md  phase6-handoff-prompt.md  yahboom-lesson-tracker.md
docs/software/: architecture.md  pid-tuning.md
firmware/esp32/: CLAUDE.md  platformio.ini
firmware/esp32/include/: nvs_config.h
firmware/esp32/scripts/: provision_nvs.py
firmware/esp32/src/: main.cpp  nvs_config.cpp
firmware/stm32/: CLAUDE.md  platformio.ini
firmware/stm32/include/config/: pin_config.h  robot_params.h  stm32f4xx_hal_conf.h
firmware/stm32/include/imu/: icm20948.h  imu_filter.h
firmware/stm32/include/motor/: encoder.h  motor.h
firmware/stm32/include/pid/: pid.h
firmware/stm32/include/uros/: uros_node.h  uros_transport.h
firmware/stm32/lib/microros/: .gitignore
firmware/stm32/scripts/: build_microros_lib.sh  check_uros.py
firmware/stm32/src/: main.c
firmware/stm32/src/imu/: icm20948.c  imu_filter.c
firmware/stm32/src/motor/: encoder.c  motor.c
firmware/stm32/src/pid/: pid.c
firmware/stm32/src/uros/: uros_clock.c  uros_node.c  uros_transport.c
firmware/stm32/test/native/: test_imu_filter.c  test_pid.c
ros2_ws/src/sbr_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/sbr_bringup/config/: ekf_params.yaml  nav2_params.yaml  twist_mux.yaml
ros2_ws/src/sbr_bringup/launch/: robot.launch.py
ros2_ws/src/sbr_controller/: CMakeLists.txt  package.xml
ros2_ws/src/sbr_controller/src/: safety_node.cpp  telemetry_node.cpp
ros2_ws/src/sbr_description/: CMakeLists.txt  package.xml
ros2_ws/src/sbr_description/urdf/: balancer.urdf.xacro
ros2_ws/src/sbr_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/sbr_interfaces/msg/: BalanceState.msg  RobotStatus.msg
ros2_ws/src/sbr_interfaces/srv/: SetPidGains.srv
scripts/: check_topics.py  setup_host.sh  setup_pi5.sh
tools/calibration/: calibrate_imu.py
