<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sbr_bringup</name>
  <version>0.1.0</version>
  <description>
    Launch files, parameter YAML files, and bringup configuration
    for the MicroROS self-balancing robot on Raspberry Pi 5.
  </description>
  <maintainer email="you@example.com">southerniot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>sbr_interfaces</exec_depend>
  <exec_depend>sbr_description</exec_depend>
  <exec_depend>sbr_controller</exec_depend>
  <exec_depend>micro_ros_agent</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
